--- a/en/c/cross of gold.803541.wikitext
+++ b/en/c/cross of gold.803541.wikitext
@@ -1,8 +1,12 @@
 {{wikipedia|Cross of Gold speech}}
 ==English==
+
 ===Etymology===
 Originating from a speech by US politician William Jennings Bryan in 1896, describing a [[metaphor]]ical [[crucifixion]] of the [[working class]] by maintaining the [[gold standard]]. It has since acquired a more generic meaning.
 
 ===Phrase===
 '''[[cross]] [[of]] [[gold]]'''
-#A public policy which puts the interests of the [[rich]] ahead of those of the [[poor]].
+
+# A public policy which puts the interests of the [[rich]] ahead of those of the [[poor]].
+
+[[Category:English phrases]]
