--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -43,17 +43,19 @@
 
 ====Translations====
 {{trans-top|to take a risk, with the potential of a positive outcome}}
+* German: {{t+|de|riskant}} {{t+|de|spielen}}, {{t+|de|spekulieren}}, {{slang}} {{t+|de|zocken}}
 {{trans-mid}}
 *Japanese: [[賭ける]] ([[かける]], kakeru)
 {{trans-bottom}}
 
 {{trans-top|to play casino games}}
+* German: {{t+|de|wetten}}, {{t+|de|spielen}}, {{slang}} {{t+|de|zocken}}
 {{trans-mid}}
 *Japanese: [[賭ける]] ([[かける]], kakeru)
 {{trans-bottom}}
 
 {{trans-top|''(transitive)'' to risk something for potential gain}}
-*German: aufs [[Spiel]] [[setzen]]
+* German: aufs {{t+|de|Spiel|n}} {{t+|de|setzen}}
 *[[Interlingua]]: [[poner]] in [[risco]]
 {{trans-mid}}
 *Japanese: [[懸ける]] ([[かける]], kakeru)
@@ -63,7 +65,6 @@
 <!--intransitive? both? In English, the 1st and 3rd are not distinct senses. -->
 {{checktrans-top}}
 *{{ttbc|Dutch}}: [[gokken]]
-*{{ttbc|German}}: [[riskant]] [[spielen]]
 {{checktrans-mid}}
 *{{ttbc|Interlingua}}: [[jocar]]
 *{{ttbc|Portuguese}}: [[jogar]]
