--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -10,14 +10,20 @@
 
 ====Translations====
 {{trans-top|American English}}
-*Chinese: [[美國英語]] (traditional); [[美国英语]] (simplified)
-*Finnish: [[amerikanenglanti]]
-*French: [[anglais américain]] {{m}}
-*German: [[Amerikanisches Englisch]]
+* Chinese: 
+*: Cantonese: {{t|yue|美國英語|tr=mei5 gwok3 jing1 jyu5}}
+*: Mandarin: [[美國英語]] (traditional); [[美国英语]] (simplified)
+* Finnish: {{t|fi|amerikanenglanti}}
+* French: {{t|fr|anglais américain|m}}
+* German: {{t|de|Amerikanisches Englisch}}
+* Hungarian: {{t|hu|amerikai angol}}
 {{trans-mid}}
-*Korean: [[미국 영어]] ([[美國英語]])
-*Swedish: [[amerikansk engelska]]
-*Russian: американский английский
+* Japanese: {{t|ja|アメリカ英語|tr=Amerika eigo|sc=Jpan}}, {{t|ja|米英語|tr=beieigo|sc=Jpan}}, {{t|ja|米語|tr=beigo|sc=Jpan}}
+* Korean: [[미국 영어]] ([[美國英語]])
+* Polish: {{t|pl|amerykański angielski}}
+* Swedish: {{t|sv|amerikansk engelska}}
+* Turkish: {{t|tr|Amerikan İngilizcesi}}
+* Russian: {{t|ru|американский английский|sc=Cyrl}}
 {{trans-bottom}}
 
 [[Category:Dialects]]
