--- a/en/h/Hildegard.855804.wikitext
+++ b/en/h/Hildegard.855804.wikitext
@@ -1,15 +1,17 @@
 ==English==
 
 ===Alternative spellings===
-*[[Hildegarde]]
+* [[Hildegarde]]
 
 ===Proper noun===
 {{en-proper noun}}
 
 # {{given name|female}} borrowed from German in the 19th century, in occasional use.
 
-----
 {{wikipedia|Hildegard of Bingen}}
+
+----
+
 ==German==
 
 ===Etymology===
@@ -18,7 +20,7 @@ Old High German ''[[hiltja]]'' "battle" + ''*gardaz'' "protector".
 ===Proper noun===
 {{infl|de|proper noun}}
 
-# {{given name|female||de:}} used since Middle Ages, best known for the 12th century saint Hildegard of Bingen.
+# {{given name|female|lang=de}} used since Middle Ages, best known for the 12th century saint Hildegard of Bingen.
 
 ----
 
@@ -27,7 +29,7 @@ Old High German ''[[hiltja]]'' "battle" + ''*gardaz'' "protector".
 ===Proper noun===
 {{infl|sv|proper noun}}
 
-# {{given name|female||sv:}} of German origin.
+# {{given name|female|lang=sv}} of German origin.
 
 [[de:Hildegard]]
 [[is:Hildegard]]
