--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -1,4 +1,5 @@
 {{see|Sir|sír|sır}}
+{{wikipedia|dab=sir (disambiguation)}}
 ==English==
 
 ===Etymology===
@@ -10,6 +11,7 @@ Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[sen
 *: {{rhymes|ɜː(r)}}
 
 ===Noun===
+{{wikipedia|sir|sir (title)}}
 {{en-noun|sg=sir or Sir|s}}
 
 # A man of a higher [[rank]] or [[position]].
