--- a/en/o/overline.775476.wikitext
+++ b/en/o/overline.775476.wikitext
@@ -7,6 +7,7 @@
 {{en-noun}}
 
 #A [[line]] drawn over text.
+#:*{{overline|ΙΣ}} {{overline|ΧΣ}} ''(Greek abbreviation of [[Jesus Christ]])''
 #A [[line]] drawn over a [[repeating decimal]].
 
 ===Verb===
