--- a/en/l/left atrium.803585.wikitext
+++ b/en/l/left atrium.803585.wikitext
@@ -5,3 +5,5 @@
 {{en-noun|sg=[[left]] [[atrium]]}}
 
 # One of the [[chamber]]s of the [[heart]] in humans and other mammals, receives [[oxygenated]] blood from the [[lung]]s [[via]] the [[pulmonary vein]]s, and pumps it into the [[left ventricle]].
+
+[[hu:left atrium]]
