--- a/en/i/indirection.742105.wikitext
+++ b/en/i/indirection.742105.wikitext
@@ -2,10 +2,11 @@
 
 ===Noun===
 {{wikipedia}}
-{{en-noun|-}}
+{{en-noun}}
 
 # A lack of [[direction]]; [[deviousness]] or [[aimlessness]]
-#{{computing}} The use of a [[variable]] or [[object]] through its [[address]]
+# {{computing}} Use of a [[variable]] or [[object]] through its [[address]]
+# An indirect action or process.
 
 [[vi:indirection]]
 [[zh:indirection]]
