--- a/en/s/Schweinhundt.856107.wikitext
+++ b/en/s/Schweinhundt.856107.wikitext
@@ -4,4 +4,4 @@
 {{infl|de|noun}}
 
 # {{archaic|slang|pejorative|lang=de}} [[pig]]-[[dog]]
-#*archaic spelling, and no usage in modern German.
+#*archaic spelling, and no usage in modern German. See [[Schweinehund]] for modern version.
