--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -193,6 +193,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * [[thingy]]
 {{bottom}}
 
+{{autological}}
 [[Category:1000 English basic words]]
 [[Category:Metasyntactic words]]
 
