--- a/en/e/EPROM.26249.wikitext
+++ b/en/e/EPROM.26249.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 ==={{acronym}}===
 {{en-noun}}
-# {{electronics}} Erasable Programmable [[read-only|Read Only]] Memory
+# {{electronics}} erasable programmable [[read-only memory]]
 
 ====Related terms====
 * [[EEPROM]]
