--- a/en/l/land of opportunity.856422.wikitext
+++ b/en/l/land of opportunity.856422.wikitext
@@ -1,5 +1,6 @@
 ==English==
+
 ===Noun===
-{{infl|en|noun}}
-#A nickname for the [[United States]].
+{infl|en|noun}}
+# {{idiom}} A nickname for the [[United States]].
 :''They say America is the '''land of opportunity'''. Opportunity for what? For children to run in the dirty streets?'' -Mr Mousekewitz in ''{{w|An American Tail: Fievel Goes West}}''
