--- a/en/i/I'll be.856487.wikitext
+++ b/en/i/I'll be.856487.wikitext
@@ -4,7 +4,7 @@ Presumably short for {{term|I'll be damned}}.
 ===Interjection===
 {{en-intj|head=[[I'll]] [[be]]}}!
 
-# {{idiom}} (Expressing [[surprise]].)
+# {{idiom}} {{non-gloss definition|Expressing [[surprise]].}}
 
 ====Synonyms====
 <!--many more could be added: perhaps this is a good candidate for an extensive WikiSaurus entry, if there is not one already--><!--copied from the synonyms section at [[I'll be a monkey's uncle]]-->
