--- a/en/f/FOIL.26230.wikitext
+++ b/en/f/FOIL.26230.wikitext
@@ -2,5 +2,5 @@
 ==={{initialism}}===
 '''FOIL'''
 
-# First Outer Inner Last, the abbreviation for one [[algorithm]] for processing the multiplication of multiple [[binomial]]s
+# First Outer Inner Last, an [[algorithm]] for processing the multiplication of multiple [[binomial]]s
 #:''Example:  (2x + 4) &times; (4x + 3y)''
