--- a/en/m/macrobian.801847.wikitext
+++ b/en/m/macrobian.801847.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Adjective===
-'''macrobian'''
+{{en-adj}}
 
 # Having an exceptionally long [[life span]].
 #:''Turtles are particularly '''macrobian''' creatures, but [[pun|are not]] [[macrobe]]s by extension.'''
