--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -56,16 +56,20 @@
 {{trans-bottom}}
 
 ===Conjunction===
-'''though'''
+{{infl|en|conjunction}}
 
 # Despite the fact that; [[although]].
 #: '''''Though''' it’s risky, it’s worth taking the chance.''
-# [[if|If]], [[that]] {{italbrac|now obsolete except in [[as though]]}}
+# {{archaic}} [[if|If]], [[that]], [[even if]].
 #: ''We be not sorry '''though''' the man dies tonight.''
+#* '''1945''', [[w:Oscar Hammerstein II|Oscar Hammerstein II]], “[[w:You'll Never Walk Alone (song)|You’ll Never Walk Alone]]” (song), in [[w:Rodgers and Hammerstein|Richard Rodgers and Oscar Hammerstein II]], ''[[w:Carousel (musical)|Carousel]]'' (musical),
+#*: Walk on through the wind, / Walk on through the rain, / '''Though''' your dreams be tossed and blown.
+
+====Usage notes====
+* {{sense|if}} This sense is now archaic, except in the fixed expression {{term|as though}}.
 
 ====Synonyms====
-* [[although]]
-* [[even though]]
+* {{sense|although}} [[although]], [[even though]]
 
 ====Translations====
 {{trans-top|although}}
