--- a/en/m/multi-billion.34077.wikitext
+++ b/en/m/multi-billion.34077.wikitext
@@ -5,10 +5,10 @@
 MOHL-tee-BIL-li-uhn
 
 ===Etymology===
-[[multi-]] + [[billion]]
+{{prefix|multi|billion}}
 
 ===Adjective===
-'''multi-billion'''
+{{infl|en|adjective}}
 
 # Having more than 1,000,000,000 in the billion range.
 # In the old numering system (''Notably British''), equivalent to more than 1,000,000,000,000 in the old billion range.
