--- a/en/b/betted.6796.wikitext
+++ b/en/b/betted.6796.wikitext
@@ -1,14 +1,14 @@
 ==English==
 
 ===Pronunciation===
-* [[w:SAMPA|SAMPA]]: /'/
+* {{SAMPA|/'/}}
 * {{IPA|/'bεtət/}}
 
 ===Verb===
 '''betted'''
 
-#{{simple past of|[[bet]]}}
-#{{past participle of|[[bet]]}}
+# {{simple past of|[[bet]]}}
+# {{past participle of|[[bet]]}}
 
 ====Translations====
 {{trans-top|simple past of bet}}
