--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -44,6 +44,7 @@
 
 ====Translations====
 {{trans-top|to take a risk, with the potential of a positive outcome}}
+* Croatian: {{t|hr|kockati|alt=kȍckati se}}
 * German: {{t-|de|riskant}} {{t+|de|spielen}}, {{t-|de|spekulieren}}, {{slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|להמר|sc=Hebr}}
 {{trans-mid}}
@@ -51,6 +52,7 @@
 {{trans-bottom}}
 
 {{trans-top|to play casino games}}
+* Croatian: {{t|hr|kockati|alt=kȍckati se}}
 * German: {{t-|de|wetten}}, {{t+|de|spielen}}, {{slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|להמר|sc=Hebr}}
 {{trans-mid}}
