--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -78,7 +78,7 @@
 * Polish: {{t|pl|gwizdek|m}}
 * Portuguese: {{t|pt|apito|m}}
 * Russian: {{t|ru|свисток|m|tr=svistók|sc=Cyrl}}
-* Serbian: {{t|sr|pištaljka|f}}, {{t-|sr|zviždaljka|f}}
+* Serbian: {{t|sr|pištaljka|f}}, {{t-|sr|zviždaljka|f}}, [[zviždalica]] {{f}}, [[pištalica]] {{f}}
 * Swedish: {{t+|sv|vissla|c}}, {{t-|sv|pipa|c}}, {{t|sv|visselpipa|c}}
 {{trans-bottom}}
 
