--- a/en/h/ha'pennies.746681.wikitext
+++ b/en/h/ha'pennies.746681.wikitext
@@ -6,3 +6,6 @@
 # {{plural of|[[ha'penny#English|ha’penny]]}}
 
 [[Category:English plurals ending in "-ies"]]
+
+[[ar:ha'pennies]]
+[[no:ha'pennies]]
