--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -6,11 +6,12 @@
 # {{obsolete}} [[crazy]] or [[insane]] when affected by the [[phase]]s of the [[moon]]
 # {{context|by extension}} Showing [[irrational]] behaviour, especially of a [[romantic]] or [[sentimental]] nature
 
-===Synonyms===
-*[[moonstricken]]
+====Synonyms====
+* [[moonstricken]]
 
 ====Translations====
-*German: [[mondsüchtig]]
+* German: [[mondsüchtig]]
+
 [[te:moonstruck]]
 [[vi:moonstruck]]
 [[zh:moonstruck]]
