--- a/en/m/macedoine.801833.wikitext
+++ b/en/m/macedoine.801833.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{F.}} {{term|macédoine}}.
+{{etyl|fr}} {{term|Macédoine||Macedonia|lang=fr}}.
 
 ===Noun===
 {{en-noun}}
@@ -14,6 +14,8 @@
 ====Translations====
 {{top}}
 *Finnish: [[hedelmäsalaatti]]
+{{mid}}
+*Spanish: {{t|es|macedonia|f}}
 {{bottom}}
 
 ===See also===
