--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -11,9 +11,7 @@
 * {{enPR|brāk}}, {{IPA|/bɹeɪk/}}, {{SAMPA|/breIk/}}
 * {{audio|en-us-break.ogg|Audio (US)}}
 * {{rhymes|eɪk}}
-
-====Homophones====
-* [[brake]]
+* Homophones: [[brake]]
 
 ===Verb===
 {{en-verb|breaks|breaking|broke|broken}}
