--- a/en/p/pistillation.741394.wikitext
+++ b/en/p/pistillation.741394.wikitext
@@ -1,9 +1,10 @@
 ==English==
+
 ===Etymology===
-From {{L.}} ''[[pistillum]]'' + ''[[-ation]]''.
+From {{etyl|la}} ''[[pistillum]]'' + ''[[-ation]]''.
 
 ===Noun===
 {{en-noun|-}}
 
 # {{obsolete}} The action of grinding with a [[pestle]].
-#*'''1646''': [They] are so far from breaking hammers, that they submit unto '''pistillation''', and resist not an ordinary pestle. — Sir Thomas Browne, ''Pseudodoxia Epidemica'', Book II, ch 5
+#* '''1646''': [They] are so far from breaking hammers, that they submit unto '''pistillation''', and resist not an ordinary pestle. — Sir Thomas Browne, ''Pseudodoxia Epidemica'', Book II, ch 5
