--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -14,11 +14,11 @@ From {{L.}} ''[[consumere]]''.
 # {{transitive}} To [[use]].
 # ''The power plant will '''consume''' 30 tons of coal per hour.''
 # {{transitive}} To [[eat]].
-#* ''Baby birds '''consume''' their own weight in food each day.''
+# ''Baby birds '''consume''' their own weight in food each day.''
 # {{transitive}} To [[occupy]] (one’s attention or thoughts).
-#* ''Desire shall '''consume''' him.''
+# ''Desire shall '''consume''' him.''
 # {{transitive}} To [[destroy]] completely.
-#* ''Fire will '''consume''' that building.''
+# ''Fire will '''consume''' that building.''
 
 ====Synonyms====
 * (''use''): [[burn]] (''of energy''), [[use]], [[use up]]
