--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -46,6 +46,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 
 ====Translations====
 {{trans-top|produce an air current}} <!--1-->
+* Armenian: {{t|hy|փչել|sc=Armn|tr=p'čel}}
 * Chinese traditional/simplified: [[吹]], [[吹]] (chuī)
 * Czech: [[vát]], [[vanout]], [[foukat]]
 * Dutch: [[blazen]]
@@ -76,6 +77,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 {{trans-bottom}}
 
 {{trans-top|explode}} <!--3-->
+* Armenian: {{t|hy|պայթել|sc=Armn|tr=payt'el}}
 * Chinese tradtional/simplified: [[爆炸]], [[爆炸]] (bào zhà)
 * Dutch: [[springen]], [[ontploffen]]
 * Finnish: [[räjähtää]]
@@ -108,6 +110,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 {{trans-bottom}}
 
 {{trans-top|propel by an air current}} <!--6-->
+* Armenian: {{t|hy|փչել|sc=Armn|tr=p'čel}}
 * Chinese traditional/simplified: [[刮走]], [[刮走]] (guā zǒu)
 * Dutch: [[blazen]]
 * Finnish: [[puhaltaa]]
@@ -129,6 +132,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 {{trans-bottom}}
 
 {{trans-top|fellate}} <!--8-->
+* Armenian: {{t|hy|ծծել|sc=Armn|tr=ççel}}
 * [[Catalan]]: [[llepar]]
 * Dutch: [[pijpen]]
 * Finnish: [[ottaa]] [[suu|suihin]]
