--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -21,7 +21,7 @@
 * Dutch: {{t+|nl|aanschouwen}}
 * Finnish: [[katsoa]] (1)
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}
-{{term-mid}}
+{{trans-mid}}
 * German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}
 * Icelandic: {{t+|is|sjá}}
 * Italian: {{t+|it|guardare}}
@@ -31,7 +31,7 @@
 * Russian: {{t+|ru|смотреть|sc=Cyrl}}, {{t+|ru|глядеть|sc=Cyrl}}
 * Serbian: [[posmatrati]], [[gledati]]
 * [[Macedonian]]: [[Гледа]], [[Следи]]
-{{term-bottom}}
+{{trans-bottom}}
 
 ===References===
 {{R:Century 1911}}
