--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -27,7 +27,8 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 # ''(in certain fixed expressions)'' A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
 #: ''The car looks cheap, but the thing is, I have doubts about its safety.''
 # {{context|U.S. slang}} A [[penis]].
-
+# A living being or creature.
+#: ''you poor '''thing'''''
 ====Quotations====
 * '''1611''' — [[w:King James Version of the Bible|King James Version of the Bible]], ''[[s:Bible (King James)/Luke|Luke]] 1:1''
 *: Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
