--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -4,7 +4,7 @@
 English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{polytonic|[[θεωρία]]}} ("contemplation, speculation, a looking at, things looked at") < {{polytonic|[[θεωρέω]]}} (to look at, view, consider, examine) < {{polytonic|[[θεωρός]]}} (spectator) < {{polytonic|[[θέα]]}} (a view) + {{polytonic|[[ὁράω]]}} (to see, to look).
 
 ===Pronunciation===
-* {{audio|en-uk-theory.ogg|Audio (US)}}
+* {{audio|en-us-theory.ogg|Audio (US)}}
 *: {{rhymes|ɪəri}}
 
 ===Noun===
