--- a/en/p/pizzica.801257.wikitext
+++ b/en/p/pizzica.801257.wikitext
@@ -1,3 +1,22 @@
+==English==
+
+===Etymology===
+
+From {{etyl|it}} {{term|lang=it|pizzica}}
+
+===Noun===
+{{en-noun|-}}
+
+# {{music}} A popular traditional [[dance]] of [[Italy]], originating on the [[Salento]] peninsula
+#*{{quote-news|2007|January 19|The New York Times|Pop and Rock Listings|New York Times|url=http://www.nytimes.com/2007/01/19/arts/music/19pop.html
+|passage=With strings, accordion, flute and lots of tambourine, it pays particular attention to the '''pizzica''', a galloping six-beat dance related to the tarantella and long used as a faith-healing cure for spider bites. }}
+
+====See also====
+*[[pizzicata]]
+*{{pedialite}}
+
+----
+
 ==Italian==
 
 ===Verb===
