--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -58,6 +58,7 @@
 * Bulgarian: {{t+|bg|остров|m|tr=òstrov|sc=Cyrl}}
 * Burmese: [[ကယ့န္း]] (kyùn)
 * [[Catalan]]: {{t+|ca|illa|f}}
+* CJKV Characters: [[島]], [[嶋]], [[岛]]
 * Chinese: [[島]], [[岛]] (dǎo); [[島嶼]], [[岛屿]] (dǎoyǔ)
 *: Min Nan: [[tó-sū]]
 * [[Corsican]]: [[isula]] {{f}}
@@ -92,8 +93,8 @@
 * {{trreq|Kannada}}
 * [[Khmer]]: {{Khmr|[[កោះ]]}} (goh)
 * Korean: [[섬]] (seom)
-* Lao: {{t-|lo|ດອນ|tr=döön|sc=Laoo|xs=Lao}}
 {{trans-mid}}
+* Lao: {{t-|lo|ດອນ|tr=döön|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|sala|f|xs=Lithuanian}}
