--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -21,7 +21,7 @@ The word ''weasel'' is the direct descendant of {{etyl|ang}} ''[[weosule]]'', a 
 # The taxonomic family [[Mustelidae]] is also called the '''weasel''' family.
 
 ====Translations====
-{{trans-top|Mustela nivalis}}
+{{trans-top|least weasel, ''Mustela nivalis''}}
 * Armenian: {{t-|hy|աքիս|tr=ak'is|sc=Armn|xs=Armenian}}
 * [[Breton]]: {{t+|br|kaerell|xs=Breton}}
 * Chinese: {{t+|cmn|黄鼠狼|sc=Hani|xs=Mandarin}} (huángshǔláng)
@@ -47,12 +47,13 @@ The word ''weasel'' is the direct descendant of {{etyl|ang}} ''[[weosule]]'', a 
 * [[West Frisian]]: {{t+|fy|wezeling|c|xs=West Frisian}}
 {{trans-bottom}}
 
-{{trans-top|any mammal of the genus Mustela}}
-* [[West Frisian]]: {{t-|fy|marter|c|xs=West Frisian}}
+{{trans-top|any mammal of the genus ''Mustela''}}
+* Finnish: {{t|fi|kärppä}}
 {{trans-mid}}
+* [[West Frisian]]: {{t-|fy|marter|c|xs=West Frisian}}
 {{trans-bottom}}
 
-{{trans-top|any mammal of the family Mustelidae}}
+{{trans-top|any mammal of the family ''Mustelidae''}}
 * Finnish: {{t-|fi|näätäeläin}}
 {{trans-mid}}
 {{trans-bottom}}
