--- a/en/t/tombstoners.719869.wikitext
+++ b/en/t/tombstoners.719869.wikitext
@@ -4,8 +4,8 @@
 ===Noun===
 '''tombstoners'''
 
-Heavily Blackened Death Doom Punx
-www.myspace.com/tombstoners
+# {{plural of|[[tombstoner]]}}
+
 [[Category:English plurals]]
 
 [[ar:tombstoners]]
