--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -14,19 +14,24 @@
 
 ====Translations====
 {{trans-top|polygon having four sides}}
+* Czech: {{t-|cs|čtyřúhelník|m}}
 * Dutch: {{t+|nl|vierhoek}}
 * Finnish: {{t+|fi|nelikulmio}}
 * French: {{t+|fr|quadrilatère}}
-* German: {{t+|de|Viere
+* German: {{t+|de|Viereck}}
+* Greek: {{t+|el|τετράπλευρο|n|sc=Grek}}
 * Hebrew: {{he-translation|מרובע|merubá}} {{m}}
-
+* Hindi: [[चतुर्भुज]]
 {{trans-mid}}
 * Italian: {{t-|it|quadrilatero|m}}
-
+* Japanese: {{t-|ja|四辺形|tr=shihenkei|sc=Jpan}}, (in common, uses {{t-|ja|四角形|tr=shikakukei|sc=Jpan}})
 * Polish: [[czworokąt]] {{m}}, [[czworobok]] {{m}}
 * Romanian: [[patrulater]], [[cadrilater]]
+* Russian: {{t+|ru|четырёхугольник|m|sc=Cyrl}}
+* Spanish: {{t+|es|cuadrilátero|m}}
+* [[Telugu]]: [[చతుర్భుజి]] (chaturbhuji)
+{{trans-bottom}}
 
-* bug langit-(ffaatt~ IN DA NAM OF SCOOOOBLISHOB ^ I AN CCCCCCCCCCCCCRRRRRRRRRRRRAAAAAAAAAAAABBBBBBBBBBBBBBB CCCCCCCCCCCCCAAAAAAAAAAAAAAAKKKKKKKKKKEEEEEEEEEEEESSSSSSSSSSSSSSSSSS
 ===Adjective===
 {{en-adj|-}}
 
@@ -36,4 +41,21 @@
 {{trans-top|having four sides}}
 * Dutch: {{t-|nl|vierhoekig}}
 * Greek: {{t+|el|τετράπλευρος|sc=Grek}}
-*jiberish-((njlirdsuelhwgfkjrewqhliregruihgeuiry^^^^^^^^^ijigutjirfut8r8u5ngih;ojt5so9ep0l*&^%##heuei;hriew;hireohpwguirpwhgasuirw)
+* Hebrew: {{he-translation|מרובע|merubá}} {{m}}
+* Hindi: [[चतुर्भुजीय]]
+{{trans-mid}}
+* Irish: [[ceathairshleasach]]
+* Italian: {{t-|it|quadrilatero}}
+* Japanese: [[四辺形]]の (shihenkei no)
+{{trans-bottom}}
+
+[[Category:Shapes]]
+
+[[zh-min-nan:quadrilateral]]
+[[el:quadrilateral]]
+[[io:quadrilateral]]
+[[pl:quadrilateral]]
+[[ru:quadrilateral]]
+[[ta:quadrilateral]]
+[[vi:quadrilateral]]
+[[zh:quadrilateral]]
