--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -15,28 +15,27 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 ===Verb===
 {{en-verb|blows|blowing|'''[[blew]]''' or (''dialect'') '''[[blowed]]'''|'''[[blown]]''' or (''dialect'') '''[[blowed]]'''}}
 
-# {{intransitive}} To produce an [[air]] [[current]]
-#* '''Quotations'''
-#: '''Blow''', winds, and crack your cheeks! rage! '''blow'''! -- ''King Lear''
-# {{intransitive}} To be propelled by an [[air]] [[current]].
+# {{intransitive}} To produce an [[air]] [[current]]:
+#* '''''"Blow''', winds, and crack your cheeks! rage! '''blow'''!" (William Shakespeare, "King Lear")''
+# {{intransitive}} To be propelled by an [[air]] [[current]]:
 #: ''The leaves '''blow''' through the streets in the fall.''
-# {{intransitive}} To [[explode]]
+# {{intransitive}} To [[explode]]:
 #: ''Get away from that burning gas tank!  It's about to '''blow'''!''
-# {{intransitive}} {{slang}} To be very undesirable (see also [[suck]])
+# {{intransitive}} {{slang}} To be very undesirable (see also [[suck]]):
 #: ''This '''blows'''!''
-# {{intransitive}} (''of a [[cetacean]]'') To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] it has taken in while [[feeding]].
+# {{intransitive}} (''of a [[cetacean]]'') To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] which it has taken in while [[feeding]]:
 #: ''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
-#: ''There she '''blows'''! (That is, "I see a whale spouting!")''
-# {{transitive}} To propel by an [[air]] [[current]].
+#: ''There she '''blows'''! (i.e. "I see a whale spouting!")''
+# {{transitive}} To propel by an [[air]] [[current]]:
 #: '''''Blow''' the dust off that book and open it up.''
-# {{transitive}} To [[squander]].
+# {{transitive}} To recklessly [[squander]]:
 #: ''I managed to '''blow''' $1000 at blackjack in under an hour.''
-# {{transitive}} {{vulgar}} To [[fellate]].
+# {{transitive}} {{vulgar}} To [[fellate]]:
 #: ''Who did you have to '''blow''' to get those backstage passes?''
-# {{transitive}} To create or shape by blowing; as, ''to blow bubbles'', ''to blow glass''
-# {{transitive}} To play a musical instrument such as a horn or woodwind.
-#: "He was blowing saxophone for me."  Ike Turner, interview by Terri Gross, "Fresh Air", NPR, 1996.
-# {{transitive}} To [[leave]]
+# {{transitive}} To create or shape by blowing; as in ''to blow bubbles'', ''to blow glass''.
+# {{transitive}} To play a musical instrument, such as a horn or woodwind:
+#* ''"He was '''blow'''ing saxophone for me" (Ike Turner, interviewed by Terri Gross on "Fresh Air", NPR, 1996).''
+# {{transitive}} To [[leave]]:
 #: ''Let's '''blow''' this joint.''
 
 ====Derived terms====
@@ -176,16 +175,16 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 ===Noun===
 {{en-noun}}
 
-# The act of [[striking]] or [[hit]]ting. <!--1-->
+# The act of [[striking]] or [[hit]]ting:<!--1-->
 #: ''A fabricator is used to direct a sharp '''blow''' to the surface of the stone.''
 #: ''During an exchange to end round 13, Duran landed a '''blow''' to the mid-section.''
-# An [[unfortunate]] [[occurrence]]. <!--2-->
+# An [[unfortunate]] [[occurrence]]:<!--2-->
 #: ''A further '''blow''' to the group came in 1917 when Thomson died while canoeing in Algonquin Park.''
-# {{uncountable}} {{slang}} [[cocaine]] <!--3-->
-# A strong [[wind]]. <!--4-->
+# {{uncountable}} {{slang}} [[cocaine|Cocaine]].<!--3-->
+# A strong [[wind]]:<!--4-->
 #: ''We're having a bit of a '''blow''' this afternoon.''
-# {{informal}} A chance to catch one’s breath. <!--5-->
-#: ''The players were able to get a bit of a '''blow''' during the last timeout.''
+# {{informal}} A chance to catch one’s breath:<!--5-->
+#: ''The players were able to get a '''blow''' during the last timeout.''
 
 ====Translations====
 {{trans-top| act of striking or hitting}}
@@ -232,15 +231,15 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * [[blowhard]]
 * [[blow hot and cold]]
 * [[blow it]]
-* [[blow job]]
-* [[blow me]]
+* [[blowjob]]
+* blow me
 * [[blow off]]
 * [[blow off steam]]
 * [[blow one's chances]]
 * [[blow one's horn]]
 * [[blow one's top]]
 {{mid2}}
-* [[blow one's trumpet]]
+* blow one's trumpet
 * [[blow out]]
 * [[blowout]]
 * [[blow over]]
@@ -248,8 +247,8 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * [[blow the whistle]]
 * [[blow up]]
 * [[blowup]]
-* [[blow up in one's face]]
-* [[body blow]]
+* blow up in one's face
+* body blow
 * [[low blow]]
 * [[mind-blowing]]
 * [[there she blows]]
