--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -145,7 +145,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Polish: [[złamać się]] (two pieces), [[rozbić się]], [[połamać się]] (more pieces)
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
 * Romanian: a (se) [[frânge]], a (se) [[rupe]]
-* Russian: [[разбиваться]]/[[разбиться]] (razbivát’s’a/razbít’s’a)
+* Russian: {{t|ru|разбиваться|sc=Cyrl|tr=razbivát’s’a}} {{impf}}, {{t|ru|разбиться|sc=Cyrl|tr=razbít’s’a}} {{pf}}
 * Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
 * Spanish: {{t+|es|romper}}
 * Swedish: {{t+|sv|gå sönder}}
@@ -172,7 +172,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Latvian: {{t-|lv|salūzt|xs=Latvian}}, {{t-|lv|lūzt|xs=Latvian}}
 * Portuguese: {{t+|pt|quebrar}}, {{t+|pt|partir}}
 * Romanian: a (se) [[frânge]]
-* Russian: [[ломаться]]/[[сломаться]] (lomát’s’a/slomát’s’a)
+* Russian: {{t|ru|ломаться|sc=cyrl|tr=lomát’s’a}} {{impf}}, {{t|ru|сломаться|sc=Cyrl|tr=slomát’s’a}} {{pf}}
 * Slovene: [[zlomiti se]]
 * Swedish: [[brytas]]
 {{trans-bottom}}
@@ -192,7 +192,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Korean: [[부서지다]] (buseojida)
 * Latvian: {{t-|lv|salūzt|xs=Latvian}}, {{t-|lv|lūzt|xs=Latvian}}
 * Portuguese: {{t+|pt|quebrar}}, {{t+|pt|partir}}
-* Russian: [[ломаться]]/[[сломаться]] (lomát’s’a/slomát’s’a)
+* Russian: {{t|ru|ломаться|sc=cyrl|tr=lomát’s’a}} {{impf}}, {{t|ru|сломаться|sc=Cyrl|tr=slomát’s’a}} {{pf}}
 * Slovene: [[pokvariti se]]
 * Swahili: [[kuvunjika]]
 * Swedish: {{t+|sv|gå sönder}}
@@ -209,7 +209,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Korean: [[쉬다]] (swida)
 * Latvian: {{t-|lv|paņemt pārtraukumu|xs=Latvian}}
 * Portuguese: {{t-|pt|pausar}}
-* Russian: [[делать]] [[перерыв]]/[[сделать]] [[перерыв]] (délat’ pererýv/sdélat’ pererýv)
+* Russian: [[делать]] [[перерыв]] (délat’ pererýv/sdélat’ pererýv)
 * Swedish: {{t+|sv|avbryta}}, {{t+|sv|bryta}}
 {{trans-bottom}}
 
@@ -261,7 +261,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{trreq|Persian}}
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible)
 * Romanian: [[rupe]], [[frânge]]
-* Russian: [[разбивать]]/[[разбить]] (razbivát’/razbít’)
+* Russian: {{t|ru|разбивать|sc=Cyrl|tr=razbivát’}} {{impf}}, {{t|ru|разбить|sc=Cyrl|tr=razbít’}} {{pf}}
 * {{trreq|Sanskrit}}
 * Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
 * Spanish: {{t+|es|romper}}, {{t+|es|quebrar}}
@@ -285,7 +285,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Latvian: {{t-|lv|salauzt|xs=Latvian}}, {{t-|lv|lauzt|xs=Latvian}}
 * Portuguese: {{t+|pt|quebrar}}, {{t+|pt|partir}}
 * Romanian: [[frânge]]
-* Russian: [[ломать]]/[[сломать]] (lomát’/slomát’)
+* Russian: {{t|ru|ломать|sc=cyrl|tr=lomát’}} {{impf}}, {{t|ru|сломать|sc=Cyrl|tr=slomát’}} {{pf}}
 * Slovene: {{t+|sl|zlomiti}}
 * Swedish: {{t+|sv|bryta}}
 {{trans-bottom}}
@@ -304,7 +304,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Korean: [[부러뜨리다]] (bureotteurida)
 * Latvian: {{t-|lv|salauzt|xs=Latvian}}, {{t-|lv|lauzt|xs=Latvian}}
 * Portuguese: {{t+|pt|quebrar}}, {{t+|pt|partir}}
-* Russian: [[ломать]]/[[сломать]] (lomát’/slomát’)
+* Russian: {{t|ru|ломать|sc=cyrl|tr=lomát’}} {{impf}}, {{t|ru|сломать|sc=Cyrl|tr=slomát’}} {{pf}}
 * Slovene: {{t+|sl|zlomiti}}
 * Swedish: {{t+|sv|bryta}}
 {{trans-bottom}}
@@ -363,7 +363,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Korean: [[깨다]] (kkaeda)
 * Latvian: {{t-|lv|pārkāpt|xs=Latvian}}
 * Portuguese: {{t+|pt|desrespeitar}}, {{t+|pt|violar}}
-* Russian: [[наоушать]]/[[нарушить]] (narušát’/narúšit’)
+* Russian: {{t|ru|нарушать|sc=Cyrl|tr=narušát’}} {{impf}}, {{t|ru|нарушить|sc=Cyrl|tr=narúšit’}} {{pf}}
 * Slovene: [[prekršiti]]
 * Swedish: {{t+|sv|bryta}}
 * [[Telugu]]: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
