--- a/en/b/barn burner.746520.wikitext
+++ b/en/b/barn burner.746520.wikitext
@@ -1,3 +1,6 @@
-[[Category:Move to Wiktionary 2007-09]]
+==English==
 
-A barn burner is any successful or impressive event.
+===Noun===
+{{en-noun|sg=[[barn]] [[burner]]}}
+
+# {{idiom}} Any [[successful]] or [[impressive]] [[event]].
