--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ==={{initialism}}===
 '''PVC'''
 
@@ -6,9 +7,11 @@
 #{{medicine}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C'''ontraction]] of the heart.
 
 ====Translations====
-{{top}}
+{{rfc-trans}}
+{{trans-top|}}
 *[[Dutch]]: [[#Dutch|PVC]]
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ====See also====
 * {{sense|chemistry}} [[ABS]]
