--- a/en/s/socialized medicine.803564.wikitext
+++ b/en/s/socialized medicine.803564.wikitext
@@ -1,6 +1,6 @@
 {{wikipedia}}
 ==English==
-===Noun===
+===Verb===
 '''[[socialized]] [[medicine]]'''
 #An [[umbrella term]] for any system of [[government]]-run [[health care]].
 #{{US|politics|idiomatic}} A politically charged term used to contrast such systems with [[free market]] alternatives and emphasize the perceived link to [[socialism]].
