--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -57,8 +57,8 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 {{trans-bottom}}
 
 ===References===
-{{R:Century 1911}}
-{{R:Webster 1913}}
+* {{R:Century 1911}}
+* {{R:Webster 1913}}
 
 [[Category:Bodily fluids]]
 [[Category:English ergative verbs]]
