--- a/en/m/machinule.801838.wikitext
+++ b/en/m/machinule.801838.wikitext
@@ -6,4 +6,4 @@
 # {{obsolete}} An [[instrument]] used by [[surveyor]]s to find [[right angle]]s.
 
 ===References===
-{{R:Century 1911}}
+* {{R:Century 1911}}
