--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -3,8 +3,7 @@
 [[Image:Mustela frenata.jpg|thumb|A weasel ''Mustela frenata'' (2)]]
 
 ===Etymology===
-
-The word ''weasel'' is the direct descendant of {{etyl|ang}} ''[[weosule]]'', a weak feminine noun that has cognates in other Germanic languages (Dutch ''wezel'', German ''Wiesel''), but has no known cognates in other Indo-European languages.
+From {{etyl|ang|en}} {{term|weosule||lang=ang}}, cognates in other Germanic languages (Dutch {{term|wezel||lang=du}}, German {{term|Wiesel||lang=de}}, but has no known cognates in other Indo-European language groups.
 
 ===Pronunciation===
 * {{IPA|/'wiːzəl/}}
