--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -1,5 +1,6 @@
-{{wikipedia}}
+{{also|Countdown}}
 ==English==
+{{wikipedia}}
 
 ===Alternative spellings===
 * [[count down]]
@@ -13,7 +14,7 @@
 
 # A [[count]] [[backward]] in fixed units to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
 # The acts of [[preparation]] carried out during this period
-# {{slang}} A radio or television program counting down the top songs of a given week, usually in reverse order and ending with the No. 1 song.
+# {{slang}} A radio or television [[program]] counting down the top songs of a given week, usually in reverse order ending with the No. 1.
 
 ====Translations====
 {{trans-top|A count backward to the time of some event}}
