--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -33,7 +33,7 @@
 * Serbian:
 *: Cyrillic: [[ја#Serbian|ја]]
 *: Roman: [[ja#Serbian|ja]]
-<!-- What the fuck? No one use no in this kind of context * Slovak: [[no#Slovak|no]] Yes, this is in the right place, no means yeah or yep in Slovak -->
+* Slovak: [[no#Slovak|no]] <!-- Yes, this is in the right place, no means yeah or yep in Slovak -->
 * Spanish: [[sí]]
 * Vietnamese: [[ừ]] (informal; does translate as "yeah")
 * [[Volapük]]: [[si#Volapük|si]]
